--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<center> <h2>@jesuis_manzi</h2></center>
+<center> <a style="color: 'white';" href"https://www.instagram.com/jesuis_manzi"><h2>@jesuis_manzi</h2></a></center>
     <button class="toggle" id="direction-toggle">
         <span>Toggle scroll axis</span>
         <svg aria-hidden="true" viewBox="0 0 512 512" width="100" title="arrows-alt-h">
